fix: Remove border top on mobile even on empty row

--- a/src/components/notes/List/list.styl
+++ b/src/components/notes/List/list.styl
@@ -20,6 +20,8 @@ $PADDING_TABLE_FIRST_COLUMN=1rem
     border-bottom 0 !important
     &:hover
         background-color inherit
+    +small-screen()
+        border-top 0 !important
 .tableCellEmpty
     flex-grow 1
 .tableCellName
